# esp-rs-monitor

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  PLAN.md  README.md  about.toml  tasks.py
.github/workflows/: build.yml
doc/: esp-monitor.1
src/: cli.rs  lib.rs  lineread.rs  logbuf.rs  main.rs  mcp.rs  reader.rs  serial.rs  stats.rs  status.rs
